--- a/index.html
+++ b/index.html
@@ -58,6 +58,33 @@
             </div>
         </div>
     </section>
-    
+    <section class="mensagem">
+        <img src="./Images/servicos.png" alt="Principais Serviços" class="img_mensagem">
+        <hgroup class="hgroup_mensagem">
+            <h1 class="titulo_sub_titulo">Há muitas razões para nos escolher</h1>
+            <h6 class="texto"><span class="velocidade">Velocidade:</span> Somos rápidos e ageis em nossos procedimentos. Sorria com confiança! Cuide da sua saúde bucal com nossa equipe experiente e tecnologia de ponta</h6>
+            <h6 class="texto"><span class="simplicidade">Simplicidade:</span> Invista em seu sorriso e colha os benefícios de uma vida mais feliz e saudável! Agende sua consulta agora mesmo! Nossos especialistas utilizam as mais recentes técnicas e equipamentos para garantir o melhor resultado possível.</h6>
+            <h6 class="texto"><span class="qualidade">Qualidade:</span> Seu sorriso merece o melhor! No nosso Consultório Odontológico, nossa missão é proporcionar um atendimento odontológico excepcional, tornando seu sorriso mais brilhante e saudável.</h6>
+        </hgroup>
+    </section>
+    <main>
+        <h1>Conheça nossos serviços principais</h1>
+        <h6>Oferecemos uma ampla gama de serviços para cuidar da sua saúde 
+            bucal. Os principais serviços incluem:</h6>
+            <div class="card">
+                <img class="img_card" src="./Images/clareamento.svg" alt="Clareamento">
+                <h1>Clareamento</h1>
+                <h1 class="sub_titulo center"></h1>
+            </div>
+            <div class="card">
+                <img class="img_card" src="./Images/consulta.svg" alt="Cpmsiçta">
+            </div>
+            <div class="card">
+                <img class="img_card" src="./Images/extracao.svg" alt="Extração">
+            </div>
+            <div class="card">
+                <img class="img_card" src="./Images/aparelho.svg" alt="Aparelho">
+            </div>
+    </main>
 </body>
 </html>
